--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@ h1.titlebar{
 li.titlebar{
     margin:  5px 10px 5px 5px;
     display: inline-block;
+    color: red;
 }
 
 ul.titlebar{
-    margin:  5px 10px 5px 50%;
+    margin:  5px 10px 5px 800px;
+    display: inline-block;
+    position:absolute;
 }
 
 h2{
