--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ li.titlebar{
 }
 
 ul.titlebar{
-    margin:  5px 10px 5px 800px;
+    margin:  5px 10px 5px 40%;
     display: inline-block;
     position:absolute;
 }
